--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,8 @@
   --container-padding-x: 15px;
 
   --transition-duration: 0.2s;
+
+  --header-height: 90px;
 }
 
 body {
@@ -93,6 +95,19 @@ a:hover {
   padding-inline: var(--container-padding-x);
 }
 
+.visually-hidden {
+  position: absolute !important;
+  width: 1px !important;
+  height: 1px !important;
+  margin: -1px !important;
+  border: 0 !important;
+  padding: 0 !important;
+  white-space: nowrap !important;
+  clip-path: inset(100%) !important;
+  clip: rect(0 0 0 0) !important;
+  overflow: hidden !important;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
   text-transform: uppercase;
@@ -103,6 +118,7 @@ h1, h2, h3, h4, h5, h6 {
   justify-content: space-between;
   align-items: center;
   column-gap: 20px;
+  min-height: var(--header-height);
   padding-inline: 32px;
   background-color: var(--color-dark-alternate);
 }
@@ -126,7 +142,7 @@ h1, h2, h3, h4, h5, h6 {
   display: inline-flex;
   align-items: center;
   column-gap: 7px;
-  height: 90px;
+  height: var(--header-height);
   text-decoration: none;
   text-transform: uppercase;
   font-weight: 700;
@@ -158,7 +174,7 @@ h1, h2, h3, h4, h5, h6 {
   color: var(--color-light);
   background-color: transparent;
   border: var(--border);
-  border-radius: var(--border-radius);
+  border-radius: 50%;
 }
 
 .header-burger-button:hover {
@@ -173,11 +189,89 @@ h1, h2, h3, h4, h5, h6 {
   box-shadow: 16px 0 0 currentColor;
 }
 
+.banner {
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  min-height: calc(100vh - var(--header-height));
+  padding: 36px 70px;
+  color: var(--color-light);
+  background-color: var(--color-dark-alternate);
+}
+
+.banner-body {
+  text-transform: uppercase;
+}
+
+.banner-info {
+  display: flex;
+  align-items: end;
+  font-size: clamp(16px, 1.56vw, 30px);
+  line-height: 1.27;
+  font-weight: 700;
+}
+
+.banner-info::before {
+  content: '';
+  width: clamp(60px, 10.1vw, 194px);
+  aspect-ratio: 1;
+  margin-right: 30px;
+  background: url("./icons/bold-arrow-down-right.svg") center/contain no-repeat;
+}
+
+.banner-title {
+  font-size: min(18.75vw, 360px);
+  line-height: 1;
+}
+
+.banner-pagination-list {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  justify-content: center;
+  list-style: none;
+
+}
+
+.banner-pagination-item {
+  display: flex;
+}
+
+.banner-pagination-button {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  padding: 7px;
+  background-color: transparent;
+  border: none;
+}
+
+.banner-pagination-button::after {
+  content: '';
+  width: 10px;
+  aspect-ratio: 1;
+  border: var(--border);
+  border-radius: 50%;
+  transition-duration: var(--transition-duration);
+}
+
+.banner-pagination-button.is-current::after {
+  background-color: var(--color-light);
+}
+
+.banner-pagination-button:not(.is-current):hover::after {
+  border-color: var(--color-ligh-grey);
+}
+
 @media (max-width: 1024px) {
   .header {
     flex-wrap: wrap;
     row-gap: 10px;
     padding-top: 20px;
+  }
+
+  .header,
+  .banner {
     padding-inline: 15px;
   }
 
@@ -188,6 +282,10 @@ h1, h2, h3, h4, h5, h6 {
 
   .header-menu-link {
     height: 50px;
+  }
+
+  .banner {
+    row-gap: 10px;
   }
 }
 
@@ -210,5 +308,13 @@ h1, h2, h3, h4, h5, h6 {
 
   .header-actions {
     column-gap: 15px;
+  }
+
+  .banner-info {
+    margin-bottom: 5px;
+  }
+
+  .banner-info::before {
+    margin-right: 10px;
   }
 }
