--- a/styles.css
+++ b/styles.css
@@ -263,6 +263,29 @@ h1, h2, h3, h4, h5, h6 {
   border-color: var(--color-ligh-grey);
 }
 
+.motivation-item:nth-child(even) {
+  background-color: var(--color-dark-alternate);
+}
+
+.motivation-item:nth-child(even) .motivation-card {
+  flex-direction: row-reverse;
+}
+
+.motivation-card {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  column-gap: clamp(30px, 10.42vw, 200px);
+}
+
+.motivation-card-image {
+ margin-block: -60px;
+}
+
+.motivation-card-body {
+  padding-left: 35px;
+}
+
 @media (max-width: 1024px) {
   .header {
     flex-wrap: wrap;
