--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,14 @@ a:hover {
   color: var(--color-ligh-grey);
 }
 
+p {
+  margin-block: 0;
+}
+
+p:not([class]):not(:last-child) {
+  margin-bottom: 24px;
+}
+
 .button {
   display: inline-flex;
   align-items: center;
@@ -111,6 +119,12 @@ a:hover {
 h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
   text-transform: uppercase;
+}
+
+.title-medium {
+  font-size: 40px;
+  line-height: 1.3;
+  color: var(--color-light);
 }
 
 .header {
@@ -285,6 +299,49 @@ h1, h2, h3, h4, h5, h6 {
 .motivation-card-body {
   padding-left: 35px;
 }
+
+.backdrop-title {
+  position: relative;
+  z-index: 2;
+}
+
+.backdrop-title::before {
+  content: '';
+  display: block;
+  position: absolute;
+  right: calc(100% + 8px);
+  width: 26px;
+  aspect-ratio: 1;
+  background: url('./icons/plus.svg') center/contain no-repeat;
+}
+
+.backdrop-title::after {
+  content: attr(data-title);
+
+  position: absolute;
+  top: -0.3em;
+  left: -0.6em;
+
+  font-family: inherit;
+  font-size: 2.8em;
+  font-weight: inherit;
+  line-height: 1;
+
+  color: transparent;
+  -webkit-text-stroke: 1px rgba(255,255,255,.35);
+
+  pointer-events: none;
+  white-space: nowrap;
+  user-select: none;
+
+  z-index: -1;
+}
+
+.motivation-card-description {
+  max-width: 400px;
+}
+
+
 
 @media (max-width: 1024px) {
   .header {
