--- a/styles.css
+++ b/styles.css
@@ -99,11 +99,28 @@ p:not([class]):not(:last-child) {
 }
 
 .button.transparent {
+  position: relative;
   height: var(--input-height);
   padding-left: 31px;
   padding-right: 80px;
   background-color: transparent;
   border: var(--border);
+}
+
+.button.transparent::after {
+  content: '';
+  position: absolute;
+  right: 0;
+  height: 100%;
+  aspect-ratio: 1;
+  background: url('./icons/arrow-top-right.svg') center/70% no-repeat;);
+  border: var(--border);
+  border-radius: 50%;
+}
+
+.button.transparent:hover {
+  color: var(--color-dark);
+  background-color: var(--color-ligh-grey);
 }
 
 .container {
@@ -131,7 +148,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .title-medium {
-  font-size: 40px;
+  font-size: clamp(20px, 2.08vw, 40px);
   line-height: 1.3;
   color: var(--color-light);
 }
@@ -358,7 +375,11 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 37px;
 }
 
-
+@media (max-width: 1919px) {
+  .motivation-card-image {
+    margin-block: -20px;
+  }
+}
 
 @media (max-width: 1024px) {
   .header {
@@ -383,6 +404,16 @@ h1, h2, h3, h4, h5, h6 {
 
   .banner {
     row-gap: 10px;
+  }
+
+  .motivation-card {
+    padding-block: 50px;
+  }
+
+  .motivation-card-image {
+    max-width: 30%;
+    height: auto;
+    margin-block: 0;
   }
 }
 
@@ -413,5 +444,28 @@ h1, h2, h3, h4, h5, h6 {
 
   .banner-info::before {
     margin-right: 10px;
+  }
+
+  .motivation-card,
+  .motivation-item:nth-child(even) .motivation-card
+  {
+    flex-direction: column-reverse;
+  }
+
+  .motivation-card {
+    row-gap: 30px;
+    padding-block: 30px;
+  }
+
+  .motivation-card-image {
+    max-width: 60%;
+  }
+
+  .motivation-card-description:not(:last-child) {
+    margin-bottom: 20px;
+  }
+
+  .motivation-card-button {
+    margin-left: 60px;
   }
 }
