--- a/styles.css
+++ b/styles.css
@@ -187,6 +187,14 @@ h1, h2, h3, h4, h5, h6 {
   font-size: clamp(24px, 3.12vw, 60px);
 }
 
+.section-description {
+  text-align: center;
+  font-size: 20px;
+  line-height: 1.65;
+  text-transform: uppercase;
+  color: var(--color-light);
+}
+
 .header {
   display: flex;
   justify-content: space-between;
@@ -398,7 +406,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .backdrop-title.centered::after {
-  top: -0.3em;
+  top: -0.2em;
   left: 50%;
   transform: translateX(-50%);
 }
@@ -540,14 +548,6 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 52px;
 }
 
-.join-us-form-subtitle {
-  text-align: center;
-  font-size: 20px;
-  line-height: 1.65;
-  text-transform: uppercase;
-  color: var(--color-light);
-}
-
 .join-us-form-body {
   display: flex;
   justify-content: center;
@@ -563,6 +563,10 @@ h1, h2, h3, h4, h5, h6 {
   grid-template-columns: repeat(2, 1fr);
 }
 
+.location-map-image {
+  height: auto;
+}
+
 .location-body {
   display: flex;
   flex-direction: column;
@@ -574,6 +578,40 @@ h1, h2, h3, h4, h5, h6 {
 
 .location-title:not(:last-child) {
   margin-bottom: 14px;
+}
+
+.location-description {
+  max-width: 490px;
+}
+
+.location-description:not(:last-child) {
+  margin-bottom: 37px;
+}
+
+.family {
+  background-color: var(--color-dark-alternate);
+}
+
+.family-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 7px;
+  padding-top: 132px;
+  padding-bottom: 62px;
+  text-align: center;
+}
+
+.family-body {
+  display: flex;
+  justify-content: center;
+  column-gap: 26px;
+  scroll-snap-type: x mandatory;
+  overflow-x: scroll;
+}
+
+.family-image {
+  scroll-snap-align: start;
 }
 
 @media (max-width: 1919px) {
@@ -629,6 +667,15 @@ h1, h2, h3, h4, h5, h6 {
 
   .join-us-title:not(:last-child) {
     margin-bottom: 80px;
+  }
+
+  .location {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+
+  .family-image {
+    height: 360px;
   }
 }
 
@@ -706,7 +753,7 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: 40px;
   }
 
-  .join-us-form-subtitle {
+  .section-description {
     font-size: 16px;
   }
 
@@ -714,5 +761,26 @@ h1, h2, h3, h4, h5, h6 {
     flex-direction: column;
     align-items: center;
     row-gap: 20px;
+  }
+
+  .location-body {
+    padding-block: 40px;
+  }
+
+  .location-description:not(:last-child) {
+    margin-bottom: 20px;
+  }
+
+  .family-body {
+    column-gap: 12px;
+  }
+
+  .family-header {
+    padding-top: 80px;
+    padding-bottom: 50px;
+  }
+
+  .family-image {
+    height: 180px;
   }
 }
