--- a/styles.css
+++ b/styles.css
@@ -782,6 +782,10 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 60px;
 }
 
+.footer-logo-image {
+  height: auto;
+}
+
 .footer-description {
   text-align: left;
 }
@@ -954,6 +958,22 @@ h1, h2, h3, h4, h5, h6 {
     padding-top: 10px;
   }
 
+  .footer-main {
+    padding-top: 80px;
+    padding-bottom: 50px;
+  }
+
+  .footer-header {
+    display: flex;
+    flex-direction: column;
+    row-gap: 30px;
+  }
+
+  .footer-body {
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 30px;
+  }
+
 }
 
 @media (max-width: 767px) {
@@ -1072,6 +1092,22 @@ h1, h2, h3, h4, h5, h6 {
 
   .calculate {
     padding-block: 60px;
+  }
+
+  .footer-body {
+    grid-template-columns: 1fr;
+  }
+
+  .footer-main {
+    padding-top: 50px;
+  }
+
+  .footer-header:not(:last-child) {
+    margin-bottom: 30px;
+  }
+
+  .footer-subscribe:not(:last-child) {
+    margin-bottom: 40px;
   }
 
 }
